--- a/index.html
+++ b/index.html
@@ -79,41 +79,101 @@
         </div>
       </div>
     </nav>
-    <div class="heroes-container">
-      <div class="home px-4 pt-5 my-5 text-center">
-        <h1 class="display-4 fw-bold text-body-emphasis">
-          Best <span>Salon </span>in Town
-        </h1>
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <p class="lead mb-4">
-            Quickly design and customize responsive mobile-first sites with
-            Bootstrap, the world’s most popular front-end open source toolkit,
-            featuring Sass variables and mixins, responsive grid system,
-            extensive prebuilt components, and powerful JavaScript plugins.
-          </p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+    <div class="px-4 pt-2 text-center border-bottom">
+      <h1 class="display-4 fw-bold text-body-emphasis">
+        Best <span>Salon</span> in Town
+      </h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">
+          Quickly design and customize responsive mobile-first sites with
+          Bootstrap, the world’s most popular front-end open source toolkit,
+          featuring Sass variables and mixins, responsive grid system, extensive
+          prebuilt components, and powerful JavaScript plugins.
+        </p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+          <button type="button" class="btn btn-warning btn-lg px-4 me-sm-3">
+            Book Now
+          </button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">
+            Contact Us
+          </button>
+        </div>
+      </div>
+      <div class="carousel-container container">
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-indicators">
             <button
               type="button"
-              class="btn-book btn btn-warning btn-lg px-4 me-sm-3"
-            >
-              Book Now
-            </button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">
-              Contact Us
-            </button>
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
           </div>
-        </div>
-        <div class="overflow-hidden" style="max-height: 40vh">
-          <div class="container px-5">
-            <img
-              src="./images/hair salon.avif"
-              class="img-fluid border rounded-3 shadow-lg mb-4"
-              alt="Example image"
-              width="900"
-              height="500"
-              loading="lazy"
-            />
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./images/eyebrow.jpg"
+                class="d-block w-100"
+                alt="eyebrow"
+                height=""
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./images/eyelash.jpg"
+                class="d-block w-100"
+                alt="eyelash"
+              />
+            </div>
+            <div class="carousel-item">
+              <img src="./images/hair.jpg" class="d-block w-100" alt="hair" />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./images/hair salon.avif"
+                class="d-block w-100"
+                alt="hair-salon"
+              />
+            </div>
           </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
       </div>
     </div>
@@ -224,83 +284,89 @@
         </div>
       </div>
     </div>
-    <div class="carousel-container container px-4 py-5">
-      <h2 class="fs-1 text-center mb-5">Gallery</h2>
-      <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"
-          ></button>
+    <div class="container">
+      <footer
+        class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top"
+      >
+        <div class="col mb-3">
+          <a
+            href="/"
+            class="d-flex align-items-center mb-3 link-body-emphasis text-decoration-none"
+          >
+            <img
+              src="./images/Jem Salon Logo_updated-01.png"
+              alt="jemsalon-logo"
+              height="40"
+            />
+          </a>
+          <p class="text-body-secondary">© 2025</p>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="./images/eyebrow.jpg"
-              class="d-block w-100"
-              alt="eyebrow"
-              height=""
-            />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./images/eyelash.jpg"
-              class="d-block w-100"
-              alt="eyelash"
-            />
-          </div>
-          <div class="carousel-item">
-            <img src="./images/hair.jpg" class="d-block w-100" alt="hair" />
-          </div>
-          <div class="carousel-item">
-            <img
-              src="./images/hair salon.avif"
-              class="d-block w-100"
-              alt="hair-salon"
-            />
-          </div>
+
+        <div class="col mb-3"></div>
+
+        <div class="col mb-3">
+          <h5>Section</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+
+        <div class="col mb-3">
+          <h5>Section</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col mb-3">
+          <h5>Section</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Home</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Features</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">Pricing</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">FAQs</a>
+            </li>
+            <li class="nav-item mb-2">
+              <a href="#" class="nav-link p-0 text-body-secondary">About</a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </div>
 
     <script
